feat: ✨ implement new report scheduler
